fourthTier: It should be easy to figure out which blocks nodes belong to https://bugs.webkit.org/show_bug.cgi?id=118957

Reviewed by Sam Weinig.

* dfg/DFGGraph.cpp:
(DFG):
(JSC::DFG::Graph::initializeNodeOwners):
* dfg/DFGGraph.h:
(Graph):
* dfg/DFGNode.h:

Canonical link: https://commits.webkit.org/137077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153293 268f45cc-cd09-0410-ab3c-d52691b4dbfc